Update employee status in table and add new web development course page

--- a/BootsHW2.html
+++ b/BootsHW2.html
@@ -49,18 +49,18 @@
                     <tr>
                         <td>Ajith</td>
                         <td>machanical</td>
-                        <td class="alert alert-success">zon</td>
+                        <td class="alert alert-success">active</td>
 
                     </tr>
                     <tr>
                         <td>Anumol</td>
                         <td>Executive</td>
-                        <td class="alert alert-primary"> zon</td>
+                        <td class="alert alert-danger">resigned</td>
                     </tr>
                     <tr>
                         <td>sabu</td>
                         <td>manager</td>
-                        <td class="alert alert-secondary">zon</td>
+                        <td class="alert alert-warning">on leave</td>
                     </tr>
             </table>
             <div class="alert alert-warning">some employees are not active</div>
