--- a/BOOTSHW3.html
+++ b/BOOTSHW3.html
@@ -20,11 +20,17 @@
     </nav>
     <h2>web development course<span class="badge badge-warning">New</span></h2>
     <div class="progress">
-        <div class="progress-bar bg-success" style="width:100%;">Html</div>
-        <div class="progress-bar bg-primary" style="width:75%;">Css</div>
+        <div class="progress-bar progress-bar-striped bg-success" style="width:100%;">Html</div>
+        </div><br>
+        <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" style="width:75%;">Css</div>
+    </div><br>
+    <div class="progress">
         <div class="progress-bar bg-warning" style="width:50%;">Javasript</div>
+        </div><br>
+        <div class="progress">
         <div class="progress-bar bg-danger" style="width:25%;">Bootstrap</div>
-        </div>
+        </div><br>
         <button type="button" class="btn btn-primary">start</button>
         <botton type="button" class="btn btn-warning">pause</botton>
         <botton type="button" class="btn btn-info">reset</botton> 
